3.24.0
======
Aug 5, 2022
- Add configurable name `prefix` to `@Examples` annotation
- Make `where` filter in `@Examples` annotation a JavaScript expression
- Internal enhancement for better handling of unresolved references during interpolation
  - Use `String => Option[String]` instead of `String => String` interpolator signature (internal enhancement)
- Retry boolean JavaScript conditions on error until timeout
- Expand scenario outline StepDefs at call site

3.23.0
======
Jul 26, 2022
- Introduce `gwen.auto.trim.data.csv=true|false` to control whether or not to trim csv data (default is `false`)
- Add new DSLs to compare blank strings
  - `<textRef> should[ not] be blank`
  - `<jsonRef> at json xpath "<path>" should[ not] be blank`
  - `<xmlRef> at xpath "<path>" should[ not] be blank`

3.22.0
======
Jul 21, 2022
- Add more DSLs to support writing to files
  - `I <write|append> "<text>" to "<filepath>" file`
  - `I <write|append> <textRef> to "<filepath>" file`
  - `I <write|append> new line to "<filepath>" file`
  - `I <write|append> "<text>" to <filepathRef> file`
  - `I <write|append> <textRef> to <filepathRef> file`
  - `I <write|append> new line to <filepathRef> file`

3.21.0
======
Jul 20, 2022
- Add DSLs to support writing to files
  - `I write "<text>" to "<filepath>" file`
  - `I write <textRef> to "<filepath>" file`
  - `I write new line to "<filepath>" file`

3.20.1
======
Jul 20, 2022
- Fix list values in settings

3.20.0
======
Jul 18, 2022
- Drop configurable `gwen.cli.options.conf` setting
- Give GWEN_XXX environment variables precedence over settings and system properties
- Cater for settings with multi name-value pairs

3.19.1
======
Jul 13, 2022
- Relax imperative step rules for Data and NoData annotated steps

3.19.0
======
Jun 30, 2022
- Add optional `required` attriubte to `Examples` tag 
  - If `true`, raise error if no data is found and tag background steps with `NoData` annotation
  - If `false` (default), no erorr is raised