@@ -2,11 +2,12 @@
 ======
 Aug 5, 2022
 - Add configurable name `prefix` to `@Examples` annotation
-- Make `where` filter in `@Examples` annotation a JavaScript expression
+- Make `where` filter in `@Examples` annotation accept a JavaScript expression
 - Internal enhancement for better handling of unresolved references during interpolation
   - Use `String => Option[String]` instead of `String => String` interpolator signature (internal enhancement)
 - Retry boolean JavaScript conditions on error until timeout
 - Expand scenario outline StepDefs at call site
+- Only accept first 10 records of CSV provided in Examples annotation for dry runs to keep performance opitmal
 
 3.23.0
 ======
